--- a/devenv/Vagrantfile
+++ b/devenv/Vagrantfile
@@ -66,7 +66,12 @@ Vagrant.configure("2") do |config|
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
   # config.vm.provision "shell", inline: <<-SHELL
+  config.vm.provision "shell", path: "setup_vagrant.sh"
   #   apt-get update
   #   apt-get install -y apache2
   # SHELL
+
+
+
+
 end
